# GameEngine

./: .ccls  .clang-format  .gitignore  .vimspector.json  CMakeLists.txt  Readme.md  build.sh  imgui.ini  premake5.lua  test_world.json  test_world.world
SandboxTesting/: CMakeLists.txt  VultrHelper  build.sh  build_release.sh  compile_commands.json  gen_cmake.sh  pch.h  premake5.lua
SandboxTesting/.cache/clangd/index/: main.cpp.B4306F50A2574E11.idx  sandbox_test.cpp.E5642B6B8B3C4D5F.idx  sandbox_test.h.6721086BAA30E520.idx
SandboxTesting/include/: TestGame.h  component_registrar.h  exports.h  game_of_life.h  sandbox_test.h  test_component.h
SandboxTesting/include/.generated/: component_registrar.cpp
SandboxTesting/include/components/: cell_component.h  test_component.h
SandboxTesting/include/system_providers/: board_system_provider.h  controller_system_provider.h  test_system_provider.h
SandboxTesting/include/systems/: board_system.h  controller_system.h  test_system.h
SandboxTesting/release/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Game  Makefile  cmake_install.cmake  compile_commands.json
SandboxTesting/res/code_examples/: test_file.h
SandboxTesting/res/models/: Clone.mtl  XWing.mtl  cube.mtl
SandboxTesting/res/models/megascan/: rbojr.json
SandboxTesting/res/rml/: rml.rcss  test.rml
SandboxTesting/res/shaders/: composite_pass.glsl  forward_material.glsl  gui.glsl  material.glsl  post_processing.glsl  skybox.glsl  stencil.glsl  unlit.glsl
SandboxTesting/src/: exports.cpp  game_of_life.cpp  main.cpp  sandbox_test.cpp  test_game.cpp
SandboxTesting/src/system_providers/: board_system_provider.cpp  controller_system_provider.cpp  test_system_provider.cpp
SandboxTesting/src/systems/: board_system.cpp  controller_system.cpp  test_system.cpp
VTL/: CMakeLists.txt  run_tests.sh
VTL/include/: doubly_linked_list.h  dynamic_array.h  hashtable.h  queue.h  stack.h  tuple.h  vtl.h
VTL/include/types/: types.h  types.hpp
VTL/tests/: doubly_linked_list.cpp  dynamic_array.cpp  hashtable.cpp  queue.cpp  stack.cpp
Vultr/: CMakeLists.txt  assets.vasset  build.sh  build_release.sh  compile_commands.json  pch.h  premake5.lua  run_tests.sh  valgrind-out.txt
Vultr/.cache/clangd/index/: Game.hpp.AD8B1CBA1AA00976.idx  Vultr.cpp.0D4E8D96DF12292E.idx  Vultr.hpp.DA42715C1E1FD832.idx  access.hpp.596D87B7BBCB45D7.idx  array.hpp.8F31C687B65009F7.idx  base_class.hpp.FB9E0F34363214C5.idx  basic.h.231B15E6F0B96685.idx  binary.hpp.004D0F1BEAFF5E49.idx  bitset.hpp.BAC2DAF2AC47B0C3.idx  box_constraints.h.0433FA7FEAB21676.idx  build_context.h.0A0A22AC4D7A2725.idx  camera_component.h.97F1B9E476EE77D6.idx  camera_system.cpp.4546637CF5AC1BF4.idx  (+195 more)
Vultr/include/: Game.hpp  Vultr.hpp  engine.hpp  game.hpp  scene.hpp  vultr.hpp
Vultr/include/core/: cereal_component_registration.h  component_constructor.h  component_renderer.h  core.h  core_component_serialization.h  core_components.h  core_system_components.h  core_systems.h
Vultr/include/errors/: alloc.h  error_handler.h
Vultr/include/filesystem/: directory.h  file.h  path.h  resource_hash.h  resource_manager.h  virtual_filesystem.h
Vultr/include/fonts/: example.cpp  font.h  freetype.h
Vultr/include/fundamental/: types.h
Vultr/include/helpers/: directory.h  file.h  file_importer.h  file_outputter.h  font_importer.h  loading_state.h  mesh_importer.h  path.h  shader_importer.h  texture_importer.h
Vultr/include/input/: input.h
Vultr/include/macros/: map.h
Vultr/include/math/: decompose_transform.h  lerp.h  map.h
Vultr/include/rendering/: render_context.h  render_group.h  render_type.h
Vultr/include/rmlui/: ShellOpenGL.h  ShellRenderInterfaceOpenGL.h  rmlui.h
Vultr/include/type_info/: type_info.h
Vultr/include/types/: types.hpp
Vultr/include/utils/: hash.h
Vultr/include/vtl/: list.hpp
Vultr/release/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  compile_commands.json
Vultr/src/: Vultr.cpp  engine.cpp  game.cpp  main.cpp
Vultr/src/core/: component_constructor.cpp  component_renderer.cpp
Vultr/src/errors/: error_handler.cpp
Vultr/src/filesystem/: directory.cpp  file.cpp  filesystem.cpp  path.cpp  resource_manager.cpp  virtual_filesystem.cpp
Vultr/src/helpers/: directory.cpp  file.cpp  file_outputter.cpp  font_importer.cpp  mesh_importer.cpp  path.cpp  shader_importer.cpp  texture_importer.cpp
Vultr/src/math/: decompose_transform.cpp  lerp.cpp  map.cpp
Vultr/src/rendering/: render_context.cpp  render_group.cpp
Vultr/src/rmlui/: ShellRenderInterfaceOpenGL.cpp
Vultr/tests/: CMakeLists.txt  main.cpp  premake5.lua
Vultr/tests/filesystem/: directory_tests.cpp  file_tests.cpp
Vultr/tests/gui/: basic_rendering.cpp
VultrEditor/: CMakeLists.txt  build.sh  build_release.sh  compile_commands.json  generator.cpp  imgui.ini  premake5.lua
VultrEditor/incbin/: incbin.c
VultrEditor/include/: edit_event_manager.h  editor.h  editor_texture_manager.h  game_manager.h
VultrEditor/include/editor/: editor.hpp
VultrEditor/include/services/: reload_watcher.h
VultrEditor/include/windows/: asset_browser.h  component_window.h  entity_window.h  game_window.h  scene_window.h  system_window.h
VultrEditor/release/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  VultrEditor  cmake_install.cmake  compile_commands.json  imgui.ini
VultrEditor/src/: data.cpp  edit_event_manager.cpp  editor.cpp  editor_texture_manager.cpp  main.cpp
VultrEditor/src/editor/: editor.cpp
VultrEditor/src/services/: reload_watcher.cpp
VultrEditor/src/windows/: asset_browser.cpp  component_window.cpp  entity_window.cpp  game_window.cpp  scene_window.cpp
VultrHelper/: CMakeLists.txt  build.sh  compile_commands.json  premake5.lua
VultrHelper/include/scripting/: generator.h  script_parser.h  script_scanner.h
VultrHelper/src/: main.cpp
VultrHelper/src/scripting/: script_parser.cpp  script_scanner.cpp
(+1136 files in other folders)
